[package]
name = "corroded_drone"
version = "0.1.6"
authors = ["Matous Hybl <hyblmatous@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
description = "An implementation of DJI Tello SDK in rust"
homepage = "https://github.com/matoushybl/corroded-drone"
documentation = "https://github.com/matoushybl/corroded-drone"
repository = "https://github.com/matoushybl/corroded-drone"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
